--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+/* HTML */
+
 :root {
     font-size: 16pt;
     --primary-color: #000000;
@@ -16,11 +18,17 @@ body {
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+/* Main */
+
 main {
     min-height: calc(100vh - 250px);
 }
 
-/* Link Styles */
+main p {
+    margin: 1.5% 2.5%;
+}
+
+/* Link */
 
 a {
     text-decoration: none;
