update var names
make variables specific to Orca Squad to avoid affecting other vars from any other resources

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #00234b;
-    --secondary-color: #ffffff;
+    --os-primary-color: #00234b;
+    --os-secondary-color: #ffffff;
 }
 
 html,
