Set Brand Colours as Global CSS Variables (#17)
* Fixed Typos

Fixed Typos

* Added brand colours as global CSS variables

* update var names

make variables specific to Orca Squad to avoid affecting other vars from any other resources

* fix vars used

update color var

Co-authored-by: Matt Davison <matt@mjdws.com>

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -10,12 +10,12 @@
 
 .header {
     position: relative;
-    background: #ececec;
+    background: var(--os-primary-color);
 }
 
 .header a {
     font-size: 1.5rem;
-    color: #232323;
+    color: var(--os-secondary-color);
     text-decoration: none;
 }
 
