setup site with working header section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
+:root{
+    --os-bg-color: rgba(0, 35, 75, 1);
+    --os-bg-color-translucent: rgba(0, 35, 75, 0.5);
+    --os-bg-color-dull: rgba(0, 55, 95, 1);
+    --os-bg-color-dull-translucent: rgba(0, 55, 95, 0.5);
+    --os-text: rgba(235, 235, 235, 1);
+    --os-text-dull: rgba(195, 195, 195, 1);
+}
+
 html,
 body {
   padding: 0;
@@ -10,3 +19,33 @@ body {
   box-sizing: border-box;
 }
 
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+@media (min-width: 576px) {
+    .container {
+        max-width: 560px;
+        width: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .container {
+        max-width: 750px;
+        width: 100%;
+    }
+}
+@media (min-width: 992px) {
+    .container {
+        max-width: 980px;
+        width: 100%;
+    }
+}
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1185px;
+        width: 100%;
+    }
+}
